--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>React App</title>
   </head>
-  <body class="font-jakarta">
+  <body class="font-jakarta text-black">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root" class="h-full w-full"></div>
     <!--
